Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-34673

qmake prints 'Access is denied' when it actually can't find the .pro file

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P3: Somewhat important
    • 6.4.0 Beta1
    • 5.2.0
    • Build tools: qmake
    • None
    • 9b2bf17f3e (qt/qtbase/dev) 9b2bf17f3e (qt/tqtc-qtbase/dev)

    Description

      Qmake prints a misleading error message when run for a directory that either contains no, or multiple, pro files:

      D:\dev\qbs\1.1\qt-stable-msvc-2012-32>qmake ..\src
      Cannot read D:/dev/qbs/1.1/src: Access is denied.
      

      What I'd expect

      some more helpful error message, like "Cannot find .pro file".

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            jbornema Joerg Bornemann
            kkohne Kai Köhne
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes